--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "prepare": "husky",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "common": "pnpm --filter common",
+    "web-app": "pnpm --filter web-app"
   },
   "lint-staged": {
     "**/*.{js,ts,tsx}": [
@@ -32,6 +34,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
